5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1674_1100.log
== TEST (2019-04-25 11:11:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:12:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.21729
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100.0
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7.0
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50.0
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = float(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:12:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = fint(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.19641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1100/main.py", line 4, in <module>
    val = fint(input())
NameError: name 'fint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:12:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.158307
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.376489
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 7
Animal: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.154229
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 50
Animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 7
Animal: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.332137
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 50
Animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.434995
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.460368
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:14:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garça")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onça-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:14:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:15:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- EXECUTION TIME:
0.11733
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	print("Animal: Tartaruga")
elif(val == 5):
	print("Animal: Garca")
elif(val == 10):
	print("Animal: Arara")
elif(val == 20):
	print("Animal: Mico-leao-dourado")
elif(val == 50):
	print("Animal: Onca-pintada")
elif(val == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:18:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))
print("Entrada:", val,)
if(val == 2):
	x = "Tartaruga"
elif(val == 5):
	x = "Garca"
elif(val == 10):
	x = "Arara"
elif(val == 20):
	x = "Mico-leao-dourado"
elif(val == 50):
	x = "Onca-pintada"
elif(val == 100):
	x = "Garoupa"
else:
	x = "invalido"
print("Entrada:", val,)
print("Animal:", x,)
	


-- OUTPUT:
Entrada: 100
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:18:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))

if(val == 2):
	x = "Tartaruga"
elif(val == 5):
	x = "Garca"
elif(val == 10):
	x = "Arara"
elif(val == 20):
	x = "Mico-leao-dourado"
elif(val == 50):
	x = "Onca-pintada"
elif(val == 100):
	x = "Garoupa"
else:
	x = "invalido"
print("Entrada:", val,)
print("Animal:", x,)
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:18:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))

if(val == 2):
	x = "Tartaruga"
elif(val == 5):
	x = "Garca"
elif(val == 10):
	x = "Arara"
elif(val == 20):
	x = "Mico-leao-dourado"
elif(val == 50):
	x = "Onca-pintada"
elif(val == 100):
	x = "Garoupa"
else:
	x = "invalido"
print("Entrada:", val,)
print("Animal:", x,)
	


-- EXECUTION TIME:
0.164854
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:18:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
val = int(input("Digite o valor: "))

if(val == 2):
	x = "Tartaruga"
elif(val == 5):
	x = "Garca"
elif(val == 10):
	x = "Arara"
elif(val == 20):
	x = "Mico-leao-dourado"
elif(val == 50):
	x = "Onca-pintada"
elif(val == 100):
	x = "Garoupa"
else:
	x = "Invalido"
print("Entrada:", val,)
print("Animal:", x,)
	


-- EXECUTION TIME:
0.164322
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
